cmake_minimum_required(VERSION 3.13)
set(project_name dma_for_teensy)
project(${project_name})

set(CMAKE_CXX_STANDARD 14)
set(TeensyDir C:/Users/Hares/AppData/Local/Arduino15/packages/teensy/hardware/avr/1.59.0/cores/teensy4)

add_executable(${project_name}
        examples/example1/example1.ino
        src/DmaSerial.cpp src/DmaSerial.h

        ${TeensyDir}/analog.c
        ${TeensyDir}/bootdata.c
        ${TeensyDir}/clockspeed.c
        ${TeensyDir}/debugprintf.c
        ${TeensyDir}/delay.c
        ${TeensyDir}/digital.c
        ${TeensyDir}/eeprom.c
        ${TeensyDir}/extmem.c
        ${TeensyDir}/fuse.c
        ${TeensyDir}/interrupt.c
        ${TeensyDir}/keylayouts.c
        ${TeensyDir}/libc.c
        ${TeensyDir}/nonstd.c
        ${TeensyDir}/pwm.c
        ${TeensyDir}/rtc.c
        ${TeensyDir}/sm_alloc_valid.c
        ${TeensyDir}/sm_calloc.c
        ${TeensyDir}/sm_free.c
        ${TeensyDir}/sm_hash.c
        ${TeensyDir}/sm_malloc.c
        ${TeensyDir}/sm_malloc_stats.c
        ${TeensyDir}/sm_pool.c
        ${TeensyDir}/sm_realloc.c
        ${TeensyDir}/sm_realloc_i.c
        ${TeensyDir}/sm_realloc_move.c
        ${TeensyDir}/sm_szalloc.c
        ${TeensyDir}/sm_util.c
        ${TeensyDir}/sm_zalloc.c
        ${TeensyDir}/startup.c
        ${TeensyDir}/tempmon.c
        ${TeensyDir}/usb.c
        ${TeensyDir}/usb_desc.c
        ${TeensyDir}/usb_joystick.c
        ${TeensyDir}/usb_keyboard.c
        ${TeensyDir}/usb_midi.c
        ${TeensyDir}/usb_mouse.c
        ${TeensyDir}/usb_mtp.c
        ${TeensyDir}/usb_rawhid.c
        ${TeensyDir}/usb_seremu.c
        ${TeensyDir}/usb_serial.c
        ${TeensyDir}/usb_serial2.c
        ${TeensyDir}/usb_serial3.c
        ${TeensyDir}/usb_touch.c
        ${TeensyDir}/Blink.cc
        ${TeensyDir}/AudioStream.cpp
        ${TeensyDir}/CrashReport.cpp
        ${TeensyDir}/DMAChannel.cpp
        ${TeensyDir}/EventResponder.cpp
        ${TeensyDir}/HardwareSerial.cpp
        ${TeensyDir}/HardwareSerial1.cpp
        ${TeensyDir}/HardwareSerial2.cpp
        ${TeensyDir}/HardwareSerial3.cpp
        ${TeensyDir}/HardwareSerial4.cpp
        ${TeensyDir}/HardwareSerial5.cpp
        ${TeensyDir}/HardwareSerial6.cpp
        ${TeensyDir}/HardwareSerial7.cpp
        ${TeensyDir}/HardwareSerial8.cpp
        ${TeensyDir}/IntervalTimer.cpp
        ${TeensyDir}/IPAddress.cpp
        ${TeensyDir}/main.cpp
        ${TeensyDir}/new.cpp
        ${TeensyDir}/Print.cpp
        ${TeensyDir}/serialEvent.cpp
        ${TeensyDir}/serialEvent1.cpp
        ${TeensyDir}/serialEvent2.cpp
        ${TeensyDir}/serialEvent3.cpp
        ${TeensyDir}/serialEvent4.cpp
        ${TeensyDir}/serialEvent5.cpp
        ${TeensyDir}/serialEvent6.cpp
        ${TeensyDir}/serialEvent7.cpp
        ${TeensyDir}/serialEvent8.cpp
        ${TeensyDir}/serialEventUSB1.cpp
        ${TeensyDir}/serialEventUSB2.cpp
        ${TeensyDir}/Stream.cpp
        ${TeensyDir}/Time.cpp
        ${TeensyDir}/Tone.cpp
        ${TeensyDir}/usb_audio.cpp
        ${TeensyDir}/usb_flightsim.cpp
        ${TeensyDir}/usb_inst.cpp
        ${TeensyDir}/WMath.cpp
        ${TeensyDir}/WString.cpp
        ${TeensyDir}/yield.cpp
        ${TeensyDir}/Arduino.h
        ${TeensyDir}/arm_common_tables.h
        ${TeensyDir}/arm_const_structs.h
        ${TeensyDir}/arm_math.h
        ${TeensyDir}/AudioStream.h
        ${TeensyDir}/avr_emulation.h
        ${TeensyDir}/avr_functions.h
        ${TeensyDir}/binary.h
        ${TeensyDir}/Client.h
        ${TeensyDir}/cmsis_gcc.h
        ${TeensyDir}/core_cm7.h
        ${TeensyDir}/core_cmInstr.h
        ${TeensyDir}/core_id.h
        ${TeensyDir}/core_pins.h
        ${TeensyDir}/CrashReport.h
        ${TeensyDir}/DMAChannel.h
        ${TeensyDir}/elapsedMillis.h
        ${TeensyDir}/EventResponder.h
        ${TeensyDir}/FS.h
        ${TeensyDir}/HardwareSerial.h
        ${TeensyDir}/imxrt.h
        ${TeensyDir}/inplace_function.h
        ${TeensyDir}/IntervalTimer.h
        ${TeensyDir}/IPAddress.h
        ${TeensyDir}/Keyboard.h
        ${TeensyDir}/keylayouts.h
        ${TeensyDir}/math_helper.h
        ${TeensyDir}/MIDIUSB.h
        ${TeensyDir}/Mouse.h
        ${TeensyDir}/pgmspace.h
        ${TeensyDir}/pins_arduino.h
        ${TeensyDir}/Print.h
        ${TeensyDir}/Printable.h
        ${TeensyDir}/Server.h
        ${TeensyDir}/smalloc.h
        ${TeensyDir}/smalloc_i.h
        ${TeensyDir}/Stream.h
        ${TeensyDir}/Udp.h
        ${TeensyDir}/usb_audio.h
        ${TeensyDir}/usb_desc.h
        ${TeensyDir}/usb_dev.h
        ${TeensyDir}/usb_flightsim.h
        ${TeensyDir}/usb_joystick.h
        ${TeensyDir}/usb_keyboard.h
        ${TeensyDir}/usb_midi.h
        ${TeensyDir}/usb_mouse.h
        ${TeensyDir}/usb_mtp.h
        ${TeensyDir}/usb_names.h
        ${TeensyDir}/usb_rawhid.h
        ${TeensyDir}/usb_seremu.h
        ${TeensyDir}/usb_serial.h
        ${TeensyDir}/usb_touch.h
        ${TeensyDir}/WCharacter.h
        ${TeensyDir}/wiring.h
        ${TeensyDir}/wiring_private.h
        ${TeensyDir}/WProgram.h
        ${TeensyDir}/WString.h

        )

include_directories(${TeensyDir})
add_definitions(-D__IMXRT1062__ -DARDUINO_TEENSY40 -DUSB_SERIAL -DTEENSYDUINO=158 -DF_CPU=180000000 -D__cplusplus)
include_directories(libs)
